Draft Earley parser

--- a/parser-test.cabal
+++ b/parser-test.cabal
@@ -27,5 +27,6 @@ executable parser-test
                      , criterion
                      , deepseq
                      , Earley
+                     , ListLike
                      , megaparsec
                      , text
